Update Incognitek Template to make it comaptible with the lates Version of Dokuwiki

--- a/print.css
+++ b/print.css
@@ -233,5 +233,5 @@ table.inline td {
   text-align: right;
 }
 
-.toc, .footerinc, .header, .bar, .user {display:none}
+#dw__toc, .footerinc, .header, .bar, .user { display: none;
 
