--- a/layout.css
+++ b/layout.css
@@ -178,7 +178,7 @@ div#pageinfo a {
 /* kopfzeile */
 
 div#kopfzeile {
-  background: url(images/content_background_bottom.png) repeat-y scroll bottom;
+  background: url(images/content_background_middle.png) repeat-y scroll bottom;
   color: black;
   padding: 0px 27px 3px 27px;
   overflow:visible;
@@ -206,7 +206,11 @@ div#kopfzeile div#kopfzeile_right {
 div#kopfzeile input.edit {
   margin-right: 5px;
   width: 100px;
+}
 
+div#kopfzeile form.button {
+  display: inline;
+}
 
 /* footer */
 
